--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
 }
+.btn-primary {
+  @apply text-black;
+}
+.black8 {
+  color: #606060;
+}
+.black5 {
+  color: #dadada;
+}
