--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   default: true;
   --color-primary: #572424;
   --color-secondary: #031517;
+  --color-black8: #e7e7e7;
 }
 
 @plugin "daisyui/theme" {
@@ -19,6 +20,7 @@
   --color-base-100: #1f2937;
   --color-base-200: #374151;
   --color-base-300: #4b5563;
+  --color-black8: #161313;
   --color-base-content: #d9d9d9;
 }
 
@@ -27,16 +29,11 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
 }
-.btn-primary {
-  @apply text-black;
-}
-.black8 {
-  @apply text-base-content;
-}
+
 .black5 {
   @apply text-base-content/60;
 }
 
 .lol{
-  background-color: #572424;
+  background-color: #161313;
 }
